@@ -2,6 +2,8 @@ v1.03 - Big maintenance patch 2020
 	Upgraded pixi.js from 4.4.1 to 5.1.6
 	Rewrote the gradient shader. Lots of extra steps removed and it's now fully documented
 	Fixed broken mp3 filepaths in the demo version
+	Changed some CSS so the game doesn't require two versions for iFrame and standalone hosting
+	Fixed a bunch of poorly designed negative margin CSS code
 	New console messages for: Background music, sky gradient changes
 
 v1.02 - Chrome breaks web audio standards
